test/library/packages/Python/correctness/myTupleBadRange2.good
myTupleBadRange2.chpl:8: In function 'main':
myTupleBadRange2.chpl:16: error: cannot call `get()` on a Python tuple with a range with stride other than 1
